@@ -1,7 +1,6 @@
 [tox]
 envlist =
     lint
-    django31
     django32
     django40
 #    djangomain
@@ -9,7 +8,6 @@ envlist =
 [testenv]
 commands = {envpython} -Wa -b -m coverage run -m django test --settings=tests.settings
 deps =
-    django31: Django~=3.1.0
     django32: Django~=3.2.0
     django40: Django~=4.0.0
 #    djangomain: https://github.com/django/django/archive/main.tar.gz
