@@ -1,3 +1,8 @@
+UNRELEASED
+==========
+
+- Drop support for Django versions before 3.2.
+
 0.9.6 - 2022-04-18
 ==========
 
